--- a/client/src/index.html
+++ b/client/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Artifish - Explore new artworks</title>
+  <title>Artifish - Explore new artwork</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
