--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,6 +1,16 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122381354-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-122381354-2', { 'send_page_view': false });
+  </script>
+
   <meta charset="utf-8">
   <title>Artifish - Explore new artwork</title>
   <base href="/">
